fix: Max height for full screen drawers slightly shows Org file on iOS

--- a/src/components/UI/Drawer/stylesheet.css
+++ b/src/components/UI/Drawer/stylesheet.css
@@ -31,7 +31,7 @@
   border-top-right-radius: 20px;
 
   background-color: var(--base3);
-  max-height: 97%;
+  max-height: 92%;
 
   overflow: auto;
 }
